--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
     <body>
-        <script type="text/javascript" src="./dist/ethers-web3.js"></script>
+        Hello
+        <script type="text/javascript" src="./web3.min.js"></script>
+        <script type="text/javascript" src="./ethers.js"></script>
         <script type="text/javascript">
             //var web3 = new Web3(new ethers.EthersProvider(true));
-            var web3 = ethers.connect(true);
+            var web3 = ethers.connect({testnet: true});
 
             var calls = [
 //                ['defaultAccount', false, []],
