--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html>
     <body>
         Hello
-        <script type="text/javascript" src="./web3.min.js"></script>
+        <script type="text/javascript" src="./node_modules/web3/dist/web3.js"></script>
         <script type="text/javascript" src="./ethers.js"></script>
         <script type="text/javascript">
             //var web3 = new Web3(new ethers.EthersProvider(true));
-            var web3 = ethers.connect({testnet: true});
+            //var web3 = ethers.connect({testnet: true});
+            var web3 = ethers.connect({endpoints: ['ws://localhost:5000/v1/morden']}, function (error) {
+                if (error) {
+                    console.log(error);
+                }
+            });
 
             var calls = [
 //                ['defaultAccount', false, []],
@@ -45,6 +50,7 @@
 //                ['call', true, []],
 //                ['estimateGas', true, []],
             ];
+/*
             for (var i = 0; i < calls.length; i++) {
                 var funcName = calls[i][0];
                 var async = calls[i][1], params = calls[i][2];
@@ -74,7 +80,15 @@
                     }
                 }
             }
-
+*/
+//web3.eth.filter({fromBlock: 'pending', address: '0x017680e5d790bfc6fb8a35c6894ea998ac422a26'}, function(error, blockHash) {
+var filter = web3.eth.filter('latest', function(error, blockHash) {
+    console.log("NEW BLOCK", error, blockHash);
+    web3.eth.getBlock(blockHash, function(error, block) {
+        console.log(error, block);
+    });
+});
+//web3.eth.filer
             /*
 
             web3.eth.getBalance('0x017680e5d790bfc6fb8a35c6894ea998ac422a26', function (error, balance) {
